--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,6 +25,7 @@
     <script src="public/compiled/components/SignUp.js"></script>
     <script src="public/compiled/components/PastWorkout.js"></script>
     <script src="public/compiled/components/Header.js"></script>
+    <script src="public/compiled/components/MusicPlayer.js"></script>
     <script src="public/compiled/index.js"></script>
 
   </body>
