--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,7 @@
     <script src="react/react.js"></script>
     <script src="react-dom/react-dom.js"></script>
     <script src="jquery/jquery.js"></script>
+    <script src="spotify-web-api-js/spotify-web-api.js"></script>
   </head>
 
   <body>
