--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,6 +28,7 @@
     <script src="public/compiled/components/Header.js"></script>
     <script src="public/compiled/components/MusicPlayer.js"></script>
     <script src="public/compiled/components/MusicLoginButton.js"></script>
+    <script src="public/compiled/components/ExerciseAudio.js"></script>
     <script src="public/compiled/index.js"></script>
 
   </body>
