Add Favorite component to display favorited exercise

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,6 +21,7 @@
     <script src="public/compiled/components/Timer.js"></script>
     <script src="public/compiled/components/Dashboard.js"></script>
     <script src="public/compiled/components/History.js"></script>
+    <script src="public/compiled/components/Favorite.js"></script>
     <script src="public/compiled/components/LogIn.js"></script>
     <script src="public/compiled/components/SignUp.js"></script>
     <script src="public/compiled/components/PastWorkout.js"></script>
