Add Banner component

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,7 @@
     <div id="root"></div>
 
     <script src="public/compiled/components/App.js"></script>
+    <script src="public/compiled/components/Banner.js"></script>
     <script src="public/compiled/components/Workout.js"></script>
     <script src="public/compiled/components/Countdown.js"></script>
     <script src="public/compiled/components/Exercise.js"></script>
